# tinyquery

./: .gitignore  pyproject.toml
tinyquery/: lexer.py
