[tool.poetry]
name = "tinyquery"
version = "1.3"
description = ""
authors = ["Kuba Karmiński <jlkarminski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
arrow = "0.12.1"
ply = "3.10"
six = "1.15"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
